--- a/2. 웹브라우저 Javascript (인프런)/4. Node/Node-Relations.html
+++ b/2. 웹브라우저 Javascript (인프런)/4. Node/Node-Relations.html
@@ -1,4 +1,3 @@
-<!--노드 종류 API(재귀함수)-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,27 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <ul id='start'>
+<body id="start">
+    <ul>
         <li><a href="./532">html</a></li>
         <li><a href="./533">css</a></li>
         <li><a href="./534">javascript</a></li>
-        <ul id='start2'>
+        <ul>
             <li><a href="./535">Javascript Core</a></li>
             <li><a href="./536">DOM</a></li>
             <li><a href="./537">BOM</a></li>
         </ul>
     </ul>
     <script>
-        function traverse(target, callback){ //재귀함수
-            if (target.nodeType === 1){
-                callback(target);
-                var c = target.childNodes;
-                for(var i =0; i<c.length; i++){
-                    traverse(c[i],callback);
-                }
-            }
-        }
+        var s = document.getElementById('start');
+        console.log(s.firstChild); //#text => body tag 와 ul tag 사이의 공백 출력
+        console.log(s.firstChild.nextSibling) //#ul
+        console.log(s.firstChild.nextSibling.nextSibling) //#text => 공백
     </script>
 </body>
 </html>
