--- a/5. 자바스크립트로 알아보는 함수형 프로그래밍 (ES5)/2. 함수형으로 전환하기.html
+++ b/5. 자바스크립트로 알아보는 함수형 프로그래밍 (ES5)/2. 함수형으로 전환하기.html
@@ -99,6 +99,7 @@ var users = [
     
     var add10 = _curry(add(10));
     console.log(add10(5));
+    console.log(add(5)(3));
 
     </script>
 </body>
