--- a/5. 자바스크립트로 알아보는 함수형 프로그래밍 (ES5)/2. 함수형으로 전환하기.html
+++ b/5. 자바스크립트로 알아보는 함수형 프로그래밍 (ES5)/2. 함수형으로 전환하기.html
@@ -85,7 +85,7 @@ var users = [
 
 
 // 3. 커링
-    // 1) _curry, _curryr
+    // 1) _curry, _curryr /
     function _curry(fn){
         return function(a){
             return function(b){
