--- a/5. 자바스크립트로 알아보는 함수형 프로그래밍 (ES5)/3. 컬렉션 중심 프로그래밍.html
+++ b/5. 자바스크립트로 알아보는 함수형 프로그래밍 (ES5)/3. 컬렉션 중심 프로그래밍.html
@@ -122,7 +122,7 @@ console.log(_map(users,function(user){ return user.name; }));
     }
 
     console.log(_some(users,function(user){
-        return user.age>80;
+        return user.age>60;
     }));
 
     // 4) every : list 내에서 모든 obj가 predi를 만족하면 return true
@@ -134,9 +134,48 @@ console.log(_map(users,function(user){ return user.name; }));
     }
 
     console.log(_every(users,function(user){
-        return user.age>20;
+        return user.age>0;
     }));
 
+
+// 4. 접기 - reduce
+    
+    _list = [2,6,5,-1]
+    // 1) _min : list 내의 가장 작은 값을 return
+    function _min(list) {
+        return _reduce(list, function(a, b){
+            return a < b ? a : b;});}
+
+    console.log(_min(_list));
+
+    // 2) _max : list 내의 가장 큰 값을 return
+    function _max(list) {
+        return _reduce(list, function(a, b){
+            return a > b ? a : b;});}
+
+    console.log(_max(_list));
+
+    // 3) _min_by : list 내에서 by에 의해 가장 작은 값을 return
+    function _min_by(list, iter){
+        return _reduce(list, function(a,b){
+            return iter(a) < iter(b) ? a : b;})}
+
+    console.log(_min_by(_list, Math.abs));
+    console.log(_min_by(users, function(user){ return user.age; }));
+    _go(users,
+    _filter(function(user) {return user.age > 30 && user.age < 40;}),
+    _min_by(_get('age')),
+    console.log)
+
+
+    // 4) _max_by : list 내에서 by에 의해 가장 큰 값을 return
+    function _max_by(list, iter){
+        return _reduce(list, function(a,b){
+            return iter(a) > iter(b) ? a : b;})}
+
+
+    // 5) _group_by : 
+    
 </script>
 </body>
 </html>
