--- a/7. Do-it 프로그레시브 웹앱 만들기/05/Vuex.html
+++ b/7. Do-it 프로그레시브 웹앱 만들기/05/Vuex.html
@@ -28,6 +28,7 @@
     </div>
 
     <script>
+        //<Vuex 엘리먼트 정의>
         const store = new Vuex.Store({
             state:{ //공유한 상탯값 데이터 정의
                 count : 0
@@ -42,7 +43,7 @@
                     return state.count--;
                 }
             },
-            getters:{ //state의 데이터값을 외보에서 읽을때
+            getters:{ //state의 데이터값을 외부에서 읽을때
                 //fnGetData : state값 반환
                 fnGetData(state){
                     return state.count;
@@ -58,6 +59,54 @@
                     if(result == true) commit('fnDecData');
                 }
             }
+        })
+
+        //<원격 API 만들기>
+        //타이머를 사용해 1초 후 성공 Promise를 반환하도록 가상의 서버 API 정의
+        const api = {
+            fnDecrement(){
+                /*비동기 계산을 수행하기 위해 Promise를 사용하고
+                  그에 따른 성공값을 반환하기 위해 resolve 함수 실행*/
+                return new Promise((resolve)=>
+                setTimeout(()=> {
+                    resolve(true);
+                },1000)); //1초 지연: 원격 서버 느낌
+            }
+        }
+
+        //<component 등록>
+        Vue.component('com-counter',{
+            props:['msg'],
+            template :`
+            <div>
+                <h2>{{ msg }}</h2>
+                <p>카운터 : {{ fnGetCount }}</p>
+                <button @click="fnIncCount">+1</button>
+                <button @click="fnDecCount">-1(원격)</button>
+                <hr>
+            </div>
+            `,
+            computed : {
+                fnGetCount(){
+                    return store.getters.fnGetData;
+                }
+            },
+            methods:{
+                //카운터 증가 : 동기 실행(commit) - store의 mutations에 직접 접근하여 실행
+                fnIncCount(){
+                    store.commit('fnIncData')
+                },
+                //카운터 감소 : 원격서버 API로 비동기 실행(dispatch) - actions에 접근하여 실행
+                fnDecCount(){
+                    store.dispatch('fnDecData')
+                }
+            }
+        })
+
+        //<instance 등록>
+        var gApp = new Vue({
+            el:"#app",
+            store
         })
     </script>
 </body>
