--- a/7. Do-it 프로그레시브 웹앱 만들기/05/vue_router.html
+++ b/7. Do-it 프로그레시브 웹앱 만들기/05/vue_router.html
@@ -47,7 +47,7 @@
             component:tmMain
         },{
             path:'/sub',
-            component:tmSub
+            component:tmSub;
         }
         ]
         //<라우터 인스턴스 생성 & routes 옵션 전달>
