--- a/7. Do-it 프로그레시브 웹앱 만들기/05/vue_router.html
+++ b/7. Do-it 프로그레시브 웹앱 만들기/05/vue_router.html
@@ -33,7 +33,7 @@
     </div>
 
     <script>
-        //<라우터에 등록할 컴포넌트 정의>
+        //<라우터에 등록할 컴포넌트 정의>\
         const tmMain={
             template:`<h2>WELCOME TO MAINPAGE</h2>`
             }
@@ -47,7 +47,7 @@
             component:tmMain
         },{
             path:'/sub',
-            component:tmSub;
+            component:tmSub
         }
         ]
         //<라우터 인스턴스 생성 & routes 옵션 전달>
