--- a/7. Do-it 프로그레시브 웹앱 만들기/06/card_typo_color.html
+++ b/7. Do-it 프로그레시브 웹앱 만들기/06/card_typo_color.html
@@ -23,8 +23,19 @@
             </v-app-bar>
             <v-content>
                 <v-container>
-                    <v-card max-width="400">
+                    <v-card max-width="400" class="pb-3">
                         <v-img src="https://picsum.photos/id/1068/400/300" aspect-ratio="2.3"></v-img>
+                        <v-card-text>
+                            <div>
+                                <h2 class="title primary--text mb-2">ESTHEVELY</h2>
+                                경희대학교 컴퓨터공학과 19학번 정지원입니다.
+                            </div>
+                        </v-card-text>
+                        <v-card-action>
+                            <v-btn color="blue white--text">OK</v-btn>
+                            <v-btn outlined color="red">CANCEL</v-btn>
+                            <v-btn background-color="#9C27B0">CANCEL</v-btn>
+                        </v-card-action>
                     </v-card>
                 </v-container>
             </v-content>
